FinTech Microservices Deployment/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: fintech

spec:
  replicas: 2

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: YOUR_DOCKER_USERNAME/backend:latest

          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: fintech

spec:
  selector:
    app: backend

  ports:
    - port: 3000

  type: ClusterIP
